<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.2</version>
		<relativePath /> <!--lookupparentfromrepository-->
	</parent>
	<groupId>com.jojo.helidon.api</groupId>
	<artifactId>avaje-helidon-nima</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<name>avaje-helidon-nima-template</name>
	<description>Demo project for Javalin</description>
	<properties>
		<java.version>20</java.version>
		<avaje.inject.version>9.3-RC3</avaje.inject.version>
		<avaje.jsonb.version>1.6-RC4</avaje.jsonb.version>
		<avaje.config.version>3.5</avaje.config.version>
		<avaje.http.version>1.44</avaje.http.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.helidon</groupId>
				<artifactId>helidon-bom</artifactId>
				<version>4.0.0-ALPHA6</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>io.helidon.nima.webserver</groupId>
			<artifactId>helidon-nima-webserver</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>7.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb</artifactId>
			<version>${avaje.jsonb.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject</artifactId>
			<version>${avaje.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-config</artifactId>
			<version>${avaje.config.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-api</artifactId>
			<version>${avaje.http.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-client</artifactId>
			<version>${avaje.http.version}</version>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject-test</artifactId>
			<version>${avaje.inject.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8-standalone</artifactId>
			<version>2.28.0</version>
		</dependency>

		<!-- Annotation processors -->
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-inject-generator</artifactId>
			<version>${avaje.inject.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-jsonb-generator</artifactId>
			<version>${avaje.jsonb.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-nima-generator</artifactId>
			<version>${avaje.http.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-http-client-generator</artifactId>
			<version>${avaje.http.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.9</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<argLine>@{argLine} --enable-preview</argLine>
					<useModulePath>false</useModulePath>
				</configuration>
			</plugin>
			<!-- Create the Runnable Jar with dependencies -->

			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.19</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
						<arg>--add-modules=jdk.incubator.concurrent</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<dependencies>
					<dependency>
						<groupId>de.skuzzle.enforcer</groupId>
						<artifactId>restrict-imports-enforcer-rule</artifactId>
						<version>2.0.0</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>enforce</id>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions />
							</rules>
						</configuration>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.avaje</groupId>
				<artifactId>avaje-inject-maven-plugin</artifactId>
				<version>1.0</version>
				<executions>
					<execution>
						<phase>process-sources</phase>
						<goals>
							<goal>provides</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/modules</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/modules</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.moditect</groupId>
				<artifactId>moditect-maven-plugin</artifactId>
				<version>1.0.0.Final</version>
				<executions>
					<execution>
						<id>create-runtime-image</id>
						<phase>package</phase>
						<goals>
							<goal>create-runtime-image</goal>
						</goals>
						<configuration>
							<modulePath>
								<path>${project.build.directory}/modules</path>
							</modulePath>
							<modules>
								<module>nima.example</module>
							</modules>
							<stripDebug>true</stripDebug>
							<noManPages>true</noManPages>
							<noHeaderFiles>true</noHeaderFiles>
							<jarInclusionPolicy>NONE</jarInclusionPolicy>
							<outputDirectory>
								${project.build.directory}/jlink-image
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>